reporte de ingresos

--- a/Proyecto2/SmileSoft/gestion_reporte/templates/reporte_cita.html
+++ b/Proyecto2/SmileSoft/gestion_reporte/templates/reporte_cita.html
@@ -69,7 +69,7 @@
                 </script>
             </center> 
            <hr>
-
+{{grupo}}
             <div class="card-footer">
                 <center>
                     <a href="{{ list_url }}" class="btn btn-success btn-flat" >
