Correcciones de Caja

--- a/Proyecto2/SmileSoft/gestion_cobros/templates/mensajes/msj_caja_abierta2.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/mensajes/msj_caja_abierta2.html
@@ -21,7 +21,7 @@
                 </div> -->
             <div class="card-body">
                 <div class="d-flex justify-content-center">
-                    <a class="btn btn-primary" style="margin: 10px;" href="#">
+                    <a class="btn btn-primary" style="margin: 10px;" href="/cobros/mostar_caja_previa/">
                         <i class="bi bi-check2-square"></i>
                         SI
                     </a>
