Actualizacion de BK

--- a/Proyecto2/SmileSoft/gestion_cobros/templates/gastos/listar_gastos.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/gastos/listar_gastos.html
@@ -75,7 +75,7 @@
 									{%if perms.gestion_administrativo.change_persona%}
 									<a class="btn btn-primary" href="#">
 										<i class="bi-pencil-square"></i>
-										Editar
+										Visualizar
 									</a>
 									{%endif%}
 									<!-- {%if perms.gestion_administrativo.delete_persona%}
