--- a/Proyecto2/SmileSoft/gestion_reporte/templates/reporte_ingresos.html
+++ b/Proyecto2/SmileSoft/gestion_reporte/templates/reporte_ingresos.html
@@ -77,7 +77,7 @@
             <br>
             {{tabla_monto_renombrada |safe}} {% endcomment %}
             <hr>
-            <p  style= "font-size:20px; color:black;"> 4. - Facturas Ingresadas por día </p>
+            <p  style= "font-size:20px; color:black;"> 4. - Facturas cobradas por día </p>
  
             {{grupo_renombrado | safe}}
             <hr>
