--- a/Proyecto2/SmileSoft/gestion_cobros/templates/gastos/agregar_detalle_comprobante.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/gastos/agregar_detalle_comprobante.html
@@ -66,7 +66,7 @@
                             <tr>
                                 <th>Cantidad</th>
                                 <th>Descripción</th>
-                                <th>Precio unitario</th>
+                                <th>Total de pago</th>
                                 <th>IVA 5%</th>
                                 <th>IVA 10%</th>
                             </tr>
