Inicio de implementacion de Ingreso de monto efectivo

--- a/Proyecto2/SmileSoft/gestion_cobros/templates/ingresar_datos_cobro.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/ingresar_datos_cobro.html
@@ -101,17 +101,52 @@
                     </table>
                 </div>
                 <div align="center">
-                    <button type="submit" target="_blank" class="btn btn-outline-primary">
+                    <button type="button" class="btn btn-outline-primary" id="boton_cobrar"  onclick="mostrar_efectivo()">
                         <i class="bi bi-box-arrow-in-down"></i>
                         Cobrar en efectivo
                     </button>
-                    &nbsp;&nbsp;
+                    <!-- &nbsp;&nbsp;
                     <a onclick="history.back()" class="btn btn-outline-danger">
                         <i class="bi bi-back"></i>
                         Atrás
-                    </a>
+                    </a> -->
                 </div>
-                
+                <script type="text/javascript">
+                    function mostrar_efectivo(){
+                        document.getElementById('monto_efectivo').style.display = 'block';
+                    }
+                    // function ocultar_efectivo(){
+                    //     document.getElementById('funcionario').style.display = 'none';
+                    // }
+                    // function mostrar_ocultar_funcionario(){
+                    //     var funcionario = document.getElementById('funcionario');
+                    //         if(funcionario.style.display == 'none'){
+                    //             mostrar_funcionario()
+                    //             document.getElementById('boton_funcionario').value = 'Ocultar';
+                    //         }
+                    //         else{
+                    //             ocultar_funcionario()
+                    //             document.getElementById('boton_funcionario').value = '+ Agregar como funcionario';
+                    //         }
+                    // }
+                </script>
+                <br>
+                <hr>
+                <div class="text-center" id="monto_efectivo" style="display: none;">
+                    <h3><b>Ingrese el monto en efectivo</b></h3>
+                    <br>
+                    <center>
+                        <div class="form-group" style=" width: 70%;">
+                            <label for="{{form2.monto_efectivo.name}}" style="float: left;"><b>{{form2.monto_efectivo.label}} en Gs</b> </label>
+                            {{form2.monto_efectivo}}
+                        </div>
+                        <br>
+                        <button type="submit" class="btn btn-outline-primary">
+                            <i class="bi bi-box-arrow-in-down"></i>
+                            Guardar
+                        </button>
+                    </center>
+                </div>
             </form>
             <br>
             
