cambio de reporte de tratamientos mas solicitados

--- a/Proyecto2/SmileSoft/gestion_reporte/templates/reporte_cita.html
+++ b/Proyecto2/SmileSoft/gestion_reporte/templates/reporte_cita.html
@@ -39,6 +39,8 @@
             {%csrf_token%}
             <hr>
             <p style= "font-size:20px">  Total de Cantidades  </p>
+            <spam> Periodo: Octubre - Diciembre</spam><br>
+            <br>
 {% comment %} #Trae los totales pero no vamos a usar{% endcomment %}
             {% comment %} {{gf1 | safe}}  {% endcomment %}
       
