--- a/Proyecto2/SmileSoft/gestion_reporte/templates/reporte_factura.html
+++ b/Proyecto2/SmileSoft/gestion_reporte/templates/reporte_factura.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <meta charset="utf-8">
@@ -16,7 +15,8 @@
             <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
             <script src="{% static 'lib/daterangepicker/spanish.js' %}"></script>
 
-            <script src="{% static 'js/report.js' %}"></script>
+            {% comment %} <script src="{% static 'js/report.js'%}"></script> {% endcomment %}
+          
 
             <script src="{% static 'js/bootstrap.min.js' %}"></script>
             <!--es para los iconos-->
@@ -97,27 +97,18 @@
                 <br>
            
                 </script>
-                <form action="" method="post">
+                <form action="" method="POST">
                     <table class="table table-bordered" id="data">
                         <thead>
                         <tr>
                             <th scope="col">Nro </th>
-                            <th scope="col">Cantidad</th>
+                            <th scope="col">Fecha</th>
 
-                            <th scope="col">Tratamiento Realizado</th>
-                            <th scope="col">Total </th>
-                            {% comment %} <th scope="col">Total</th> {% endcomment %}
+                            <th scope="col">Monto en Gs. </th>
                         </tr>
                         </thead>
                         <tbody>
-                            {%csrf_token%}
-                                <tr>
-                                    <td ></td>
-                                    <td ></td>
-                                    <td >{{search.tratamiento_reporte}}</td>
-                                    <td >{{search.fecha}}</td>
-                                </tr>
-                           {{tratamiento_reporte}}
+                            
                         </tbody>
                     </table>
                 </form>
@@ -134,7 +125,75 @@
         {% endblock %}
         
 {% block javascript %}
-
+<script type="text/javascript">
+    var date_range = null;
+    var date_now = new moment().format('YYYY-MM-DD');
+    
+    function generate_report() {
+        var parameters = {
+            'action': 'search_report',
+            'start_date': date_now,
+            'end_date': date_now,
+        };
+    
+        if (date_range !== null) {
+            parameters['start_date']= date_range.startDate.format('YYYY-MM-DD');
+            parameters['end_date'] = date_range.endDate.format('YYYY-MM-DD');
+        }
+    
+       $('#data').DataTable({
+            responsive: true,
+            autoWidth: false,
+            destroy: true,
+            deferRender: true,
+            ajax: {
+                url: 'reporte_factura.html',
+                type: 'POST',
+                data: parameters,
+                dataType: "script",
+                dataSrc: ""
+            },
+   
+            columnDefs: [
+                {
+    //                 targets: [-1, -2, -3],
+                    class: 'text-center',
+                    orderable: false,
+                    render: function (data, type, row) {
+                        return 'Gs.' + parseFloat(data).toFixed(2);
+                    }
+                },
+            ],
+            initComplete: function (settings, json) {
+    
+            }
+        });
+    }
+    
+    
+    $(function () {
+        $('input[name="date_range"]').daterangepicker({
+             locale : {
+                format: 'YYYY-MM-DD',
+                applyLabel: '<i class="fas fa-chart-pie"></i> Aplicar',
+                cancelLabel: '<i class="fas fa-times"></i> Cancelar',
+            }
+        }).on('apply.daterangepicker', function (ev, picker) {
+            date_range = picker;
+            generate_report();
+            console.log(picker.setStartDate.format('YYYY-MM-DD')+'-'+ picker.endDate.format('YYYY-MM-DD'));
+            
+            }).on('cancel.daterangepicker', function (ev, picker) {
+            $(this).data('daterangepicker').setStartDate(date_now);
+            $(this).data('daterangepicker').setEndDate(date_now);
+            date_range = picker;
+            generate_report();
+        });
+    
+        generate_report();
+    });
+    
+</script>
 
 {% endblock %}
    
