--- a/Proyecto2/SmileSoft/gestion_reporte/templates/tratamiento_mas_solicitado.html
+++ b/Proyecto2/SmileSoft/gestion_reporte/templates/tratamiento_mas_solicitado.html
@@ -43,9 +43,10 @@
                         <hr> {% endcomment %}
                        
                         <center><p style= "font-size: 22px";> <b>Reporte de Tratamientos</b> </p></center>
-                     
-                        {{tabla |safe}}
-                    
+                       <spam> Periodo: Octubre - Diciembre</spam><br>
+                    <br>
+               {{servicios | safe}}
+
                         <!--Es la lista como un diccionario-->
                         {% comment %} {{resultado}} {% endcomment %}
                         <!--fin del diccionario-->
