--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -442,8 +442,8 @@
                                                     </strong>
                                               
                                                     <li><a class="dropdown-item" href="/reportes/tratamiento_mas_solicitado/">• Más Solicitados</li></a>
-                                                    {% comment %} <li><a class="dropdown-item" href="/reportes/reporte_tratamiento/">• Reporte de Ventas</li></a>
-                                                   {% endcomment %}
+                                                    <li><a class="dropdown-item" href="/reportes/reporte_factura/">• Reporte de Ventas</li></a>
+                                                  
                                                 <strong class="dropdown-header" style="color:blue; font-size:16px;" >
                                                   Cita
                                                 </strong>
