--- a/Proyecto2/SmileSoft/gestion_cobros/templates/mensajes/msj_caja_abierta.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/mensajes/msj_caja_abierta.html
@@ -1,7 +1,7 @@
 {%extends 'panel_control/base.html'%}
 
 {%block content%}
-<!-- {%if perms.gestion_administrativo.add_cargo%} -->
+{%if perms.gestion_cobros.add_cobrocontado%}
     <div class="col-12 col-md-6 offset-md-3">
         <div class="card">
             <br>
@@ -31,5 +31,5 @@
             </div>
         </div>
     </div>
-<!-- {%endif%} -->
+ {%endif%}
 {%endblock%}
