Implementacion de calcular vuelto

--- a/Proyecto2/SmileSoft/gestion_cobros/templates/ingresar_datos_cobro.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/ingresar_datos_cobro.html
@@ -101,7 +101,7 @@
                     </table>
                 </div>
                 <div align="center">
-                    <button type="button" class="btn btn-outline-primary" id="boton_cobrar"  onclick="mostrar_efectivo()">
+                    <button type="submit" class="btn btn-outline-primary" id="boton_cobrar">
                         <i class="bi bi-box-arrow-in-down"></i>
                         Cobrar en efectivo
                     </button>
@@ -111,7 +111,7 @@
                         Atrás
                     </a> -->
                 </div>
-                <script type="text/javascript">
+                <!-- <script type="text/javascript">
                     function mostrar_efectivo(){
                         document.getElementById('monto_efectivo').style.display = 'block';
                     }
@@ -129,8 +129,8 @@
                     //             document.getElementById('boton_funcionario').value = '+ Agregar como funcionario';
                     //         }
                     // }
-                </script>
-                <br>
+                </script> -->
+                <!-- <br>
                 <hr>
                 <div class="text-center" id="monto_efectivo" style="display: none;">
                     <h3><b>Ingrese el monto en efectivo</b></h3>
@@ -145,7 +145,7 @@
                             <i class="bi bi-box-arrow-in-down"></i>
                             Guardar
                         </button>
-                    </center>
+                    </center> -->
                 </div>
             </form>
             <br>
