Implementacion completa de cobro y cierre de caja
-Al cobrar primero solicita el monto en efectivo, luego calcula el vuelto y recien despues cobra
-Cierre de caja finalizado

--- a/Proyecto2/SmileSoft/gestion_cobros/templates/ingresar_datos_cobro.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/ingresar_datos_cobro.html
@@ -16,7 +16,7 @@
             </div>
         </center>
         <div class="card-body">
-            <form action="" method="POST">
+            <form method="POST">
                 {%csrf_token%}
                 <div style="margin: 20px;">
                     <div>
