reporte con filtro

--- a/Proyecto2/SmileSoft/gestion_reporte/templates/reporte_factura.html
+++ b/Proyecto2/SmileSoft/gestion_reporte/templates/reporte_factura.html
@@ -97,7 +97,7 @@
                 <br>
            
                 </script>
-                <form action="" method="POST">
+                <form action="sea" method="POST">
                     <table class="table table-bordered" id="data">
                         <thead>
                         <tr>
