--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -399,8 +399,9 @@
                                                     <li><a class="dropdown-item" href="/cobros/listar_cobros_pendientes/"> 
                                                       <font color="black">  • Cobros pendientes</font></a>
                                                     </li>
+                                                    <hr>
                                                     <li><a class="dropdown-item" href="/cobros/listar_gastos/"> 
-                                                      <font color="black">  • Gastos</font></a>
+                                                      <font color="black"> <strong  style="color:blue; font-size:16px;" > • Gastos </strong> </font></a>
                                                     </li>
                                                   </ul>
                                               </li>
@@ -442,7 +443,7 @@
                                                     </strong>
                                               
                                                     <li><a class="dropdown-item" href="/reportes/tratamiento_mas_solicitado/">• Más Solicitados</li></a>
-                                                    <li><a class="dropdown-item" href="/reportes/reporte_factura/">• Reporte de Ventas</li></a>
+                                                    {% comment %} <li><a class="dropdown-item" href="/reportes/reporte_factura/">• Reporte de Ventas</li></a> {% endcomment %}
                                                   
                                                 <strong class="dropdown-header" style="color:blue; font-size:16px;" >
                                                   Cita
@@ -454,7 +455,9 @@
                                                   Ingresos
                                                 </strong>
                                                 <!--Opcion 11.2 -->
-                                                    <li><a class="dropdown-item" href="/reportes/reporte_ingresos/">• Reporte de Ingresos</li></a>
+                                                    <li><a class="dropdown-item" href="/reportes/reporte_ingresos/">• Ingresos En General </li></a>
+                                                    <li><a class="dropdown-item" href="/reportes/ingreso_diario/">• Ingreso Diario</li></a>
+                                                    <li><a class="dropdown-item" href="/reportes/ingreso_mensual/">• Ingreso Mensual</li></a>
                                                     
                                                 
                                               </ul>
